fix habilidades section align

--- a/css/components/main-banner.css
+++ b/css/components/main-banner.css
@@ -31,14 +31,15 @@
     .main-banner{
         width: 100%;
         height: 682px;
-        padding-left: 7px;
         display: flex;
         justify-content: center;
-        align-items: flex-start;
+        padding-left: 0;
     }
 
     .main-banner .wrapper{
+        display: flex;
         width: 335px;
+        align-items: center;
     }
 
     .main-banner .navigation{
